<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PostGameActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_gamemode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_gamemode"
                android:drawableLeft="@drawable/ic_gamemode"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/gamemode"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray" />

            <EditText
                android:id="@+id/et_number_of_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_number_of_players"
                android:drawableLeft="@drawable/ic_number_of_players"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/number_of_players"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_player_1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_player_one"
                android:drawableLeft="@drawable/ic_player_one"
                android:drawablePadding="8dp"
                android:drawableTint="@color/blue"
                android:ems="10"
                android:hint="@string/player_1_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray" />

            <EditText
                android:id="@+id/et_player_2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_player_two"
                android:drawableLeft="@drawable/ic_player_two"
                android:drawablePadding="8dp"
                android:drawableTint="@color/red"
                android:ems="10"
                android:hint="@string/player_2_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_player_3_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_player_three"
                android:drawableLeft="@drawable/ic_player_three"
                android:drawablePadding="8dp"
                android:drawableTint="@color/green"
                android:ems="10"
                android:hint="@string/player_3_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_player_4_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_player_four"
                android:drawableLeft="@drawable/ic_player_four"
                android:drawablePadding="8dp"
                android:drawableTint="@color/yellow"
                android:ems="10"
                android:hint="@string/et_player_4_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_winner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_winner"
                android:drawableLeft="@drawable/ic_winner"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/winner"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray" />

            <EditText
                android:id="@+id/et_gametime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_gametime"
                android:drawableLeft="@drawable/ic_gametime"
                android:drawablePadding="8dp"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:hint="Spieldauer in Minuten"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="Statistik"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.095" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="Hinzufügen"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_statistics"
        app:layout_constraintTop_toTopOf="@+id/btn_statistics" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>